# codyssey

./: .gitignore  CMakeLists.txt  README.md
include/: problem.h  solution.h
src/: main.cpp  problem.cpp  solution.cpp
